# xorg__app__xrx

./: .gitignore  ChangeLog  Makefile.am  README  configure.ac
helper/: .gitignore  GetUrl.c  Makefile.am  helper.c  xrx.man
htdocs/: Makefile.am
plugin/: .cvsignore  Main.c  Makefile.am  PProcess.c  libxrx.man
plugin/common/: npunix.c
plugin/include/: jri_md.h  npapi.h  npupp.h
rx/: PParse.c  PRead.c  Prefs.c  XAuth.c  XDpyName.c  XUrls.c
specs/: Makefile.am  rx.xml
testplugin/: testplugin.man
xnest-plugin/: Makefile.am  RxPlugin.h  XnestDis.c
